# Basketball_training_partner

./: .dockerignore  .gitignore  LICENSE  README.md  launch_ros.sh
config/: config.ini  config_cpp.ini
cpp/: CMakeLists.txt
cpp/include/: Capture.hpp  Config.hpp  Utils.hpp
cpp/src/: Capture.cpp  Config.cpp  Utils.cpp  YOLODetector.cpp  main.cpp
docker/: compose.yaml  dockerfile_cpp  dockerfile_python
python/: detect.py  requirements.txt
ros2_ws/src/basketball_detection/: CMakeLists.txt  package.xml
ros2_ws/src/basketball_detection/include/basketball_detection/: Capture.hpp  Config.hpp  Detection.hpp  YOLODetector.hpp
ros2_ws/src/basketball_detection/src/: Capture.cpp  Config.cpp  Utils.cpp  YOLODetector.cpp  publisher_node.cpp
ros2_ws/src/controller/: CMakeLists.txt  package.xml
ros2_ws/src/controller/include/: Config.hpp
ros2_ws/src/controller/src/: Config.cpp  servo_node.cpp  subscriber_node.cpp
servo/: README.md  main.cpp  main.py  servo  servo_control  servo_wiringPi
servo/src/: main.cpp
utils/: export_models_to_onnx.py
